# orion-ros2-reference

./: .gitignore  LICENSE  README.md  deploy_all.sh  deploy_all_arm.sh  deploy_all_pc.sh  deploy_arch.sh  deploy_to_docker.sh  deploy_to_infra.sh
common_src/: CMakeLists.txt  routeparser.cpp  routeparser.hpp
config/: base_config.json  system_config.json
config_arm/: base_config.json  system_config.json
config_arm/repository/: repository.json
config_x86/: base_config.json  system_config.json
config_x86/repository/: repository.json
cross-compile/: flash_target.sh  update_sysroot.sh
doc/: Doxyfile
doc/example/: 99-usb-serial.rules  base_config.json  deploy_all_pc.sh  system_config.json
docker/: add_eth_if.sh  build.sh  build_arm.sh  build_dev.sh  build_image.sh  build_infra.sh  create_network.sh  create_sysroot.sh  dev_start.sh  docker_startx11.sh  infra_start.sh  install_paho.sh  start_debug.sh  start_debug_arm.sh  start_deploy_debug.sh  start_deploy_debug_arm.sh  sysroot_rsync_include.txt
docker/dev_image/: Dockerfile  ros_entrypoint.sh
docker/infra_image/: Dockerfile
docker/run_in_docker_scripts/: build.sh  build_arm.sh  build_arm_ros2.sh  build_x86.sh  crosscompile_env.sh  start_debug.sh  xavier-linux-toolchain.cmake
imx_219_camera_board/MIPI_To_HDMI/: MIPI_To_HDMI.PrjPcb  MIPI_To_HDMI.SchDoc
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
jenkins/: orian-jenkins-config.groovy
msgs/rtcm_msg/: CMakeLists.txt  RtkRTCM.msg  package.xml
pcb/Jetson_Xavier_NX_Carrier_Board_v1.1(NVME)/Assembly/: Jetson_Xavier_NX_Carrier_Board_v1.1_BOM.xls  Xavier_NX_Carrier_Board_v1.1.GBO  Xavier_NX_Carrier_Board_v1.1.GTO  Xavier_NX_Carrier_Board_v1.1.GTP  Xavier_NX_Carrier_Board_v1.1.GTS
pcb/Jetson_Xavier_NX_Carrier_Board_v1.1(NVME)/Drill/: CAMtastic.Cam  Xavier_NX_Carrier_Board_v1.1-RoundHoles.TXT  Xavier_NX_Carrier_Board_v1.1-SlotHoles.TXT  Xavier_NX_Carrier_Board_v1.1.DRL  Xavier_NX_Carrier_Board_v1.1.DRR  Xavier_NX_Carrier_Board_v1.1.LDP
pcb/Jetson_Xavier_NX_Carrier_Board_v1.1(NVME)/Gerber/: Xavier_NX_Carrier_Board_v1.1.G1  Xavier_NX_Carrier_Board_v1.1.GBL  Xavier_NX_Carrier_Board_v1.1.GBP  Xavier_NX_Carrier_Board_v1.1.GBS  Xavier_NX_Carrier_Board_v1.1.GD1  Xavier_NX_Carrier_Board_v1.1.GG1  Xavier_NX_Carrier_Board_v1.1.GM1  Xavier_NX_Carrier_Board_v1.1.GM13  Xavier_NX_Carrier_Board_v1.1.GM3  Xavier_NX_Carrier_Board_v1.1.GM4  Xavier_NX_Carrier_Board_v1.1.GP1  Xavier_NX_Carrier_Board_v1.1.GP2  Xavier_NX_Carrier_Board_v1.1.GP3  Xavier_NX_Carrier_Board_v1.1.GTL  Xavier_NX_Carrier_Board_v1.1.apr
pcb/Jetson_Xavier_NX_Carrier_Board_v1.1(NVME)/Project/: CSI.SchDoc  Jetson_Xavier_NX_Carrier_Board_v1.1.PrjPcb  Jetson_Xavier_NX_Carrier_Board_v1.1.PrjPcbStructure  Jetson_Xavier_NX_Carrier_Board_v1.1.SchDoc  NVME.SchDoc  POWER.SchDoc  SOM.SchDoc  WIFI_BT.SchDoc
pcb/Jetson_Xavier_NX_Carrier_Board_v1.1(NVME)/__Previews/: CSI.SchDocPreview  Display.SchDocPreview  ETHERNET.SchDocPreview  Jetson_Xavier_NX_Carrier_Board_v1.1.SchDocPreview  NVME.SchDocPreview  POWER.SchDocPreview  SOM.SchDocPreview  USB.SchDocPreview  WIFI_BT.SchDocPreview
pcb/Jetson_Xavier_NX_Carrier_Board_v1.1(NVMe)/: CSI.SchDoc  Display.SchDoc  ETHERNET.SchDoc  Jetson_Xavier_NX_Carrier_Board_v1.1.PrjPcb  NVME.SchDoc  POWER.SchDoc  USB.SchDoc  WIFI_BT.SchDoc
pcb/imx_219_camera_board/DesignFile/: IMX219_MIPI_HDMI.PrjPcb  MIPI_To_HDMI.SchDoc
pcb/imx_219_camera_board/MIPI_To_HDMI/: MIPI_To_HDMI.PcbDoc
pcb/imx_477_camera_board/DesignFile/: IMX477_MIPI_HDMI.PrjPcb  IMX477_MIPI_HDMI.SchDoc
pcb/xavier_nx_carrier_board/: README.rst  jetson-nano-baseboard.PrjPcb  jetson_xavier_nx_board.PrjPcb
pcb/xavier_nx_carrier_board/Documentation/: Jetson_Nano_Baseboard-Rev.1.4.2-bom.csv  Jetson_Nano_Baseboard-Rev.1.4.2-pnp.csv  jetson_xavier_nx_board-bom.csv
pcb/xavier_nx_carrier_board/Libraries/: jetson-nano-baseboard.SchLib
pcb/xavier_nx_carrier_board/PCB/: ID-Serial.SchDoc  SoM.SchDoc  csi.SchDoc  (+6 more)
src/ConfigNode/: CMakeLists.txt  confignode.hpp  configurationhandler.cpp  configurationhandler.hpp  executioncontext.cpp  executioncontext.hpp  executionhandler.hpp  lifecyclemanager.hpp  mqttbackend.hpp  mqttcallback.hpp  nodecfg.hpp  package.xml  packagedownloader.cpp  packagedownloader.hpp  persistancehandler.cpp  persistencehandler.hpp  testCommit.txt
src/ConfigNode/dox/: page_base_conf_ex.dox  page_config_node_setup.dox  page_config_process.dox  page_create_sysroot_for_cross_compile.dox  page_description_of_xavier_setup.dox  page_dev_setup.dox  page_gitlab_worflow.dox  page_main.dox  page_practical_help_udev.dox  page_setup_own_node.dox  page_setup_xavier.dox  page_sys_conf_ex.dox
src/RtcmNode/: CMakeLists.txt  interface.json  ntripcallback.hpp  ntripclient.hpp  rtcmnode.cpp  rtcmnode.hpp  socket.cpp
src/RtcmNode/dox/: main_page.dox  page_rtcm_config.dox  start_page.dox
src/UbxGpsNode/: CMakeLists.txt  exec_entry.cpp  interface.json  package.xml  routeparser.cpp  routeparser.hpp  ubxcbinterface.hpp  ubxcfgmessage.cpp  ubxcfgmessage.hpp  ubxgpsnode.cpp  ubxgpsnode.hpp  ubxmessage.hpp  ubxreceivemessage.cpp  ubxreceivemessage.hpp  ubxserialhandler.cpp  ubxserialhandler.hpp
src/UbxGpsNode/messages/: ubxackack.cpp  ubxackack.hpp  ubxacknak.hpp  ubxnaveoe.hpp  ubxnavhighpresgeo.cpp  ubxnavhighpresgeo.hpp  ubxnavpvt.cpp  ubxnavstatus.cpp  ubxnavstatus.hpp  ubxusbmsgcfg.cpp
src/UbxGpsNode/test/: ubx_unit_test.cpp
src/config_node/: CMakeLists.txt  confignode.cpp  configurationhandler.cpp  configurationhandler.hpp  exec_entry.cpp  executioncontext.hpp  executionhandler.cpp  lifecyclemanager.cpp  mqttbackend.cpp  mqttcallback.hpp  packagedownloader.cpp  packagedownloader.hpp
src/rtcm_node/: exec_entry.cpp  ntripclient.cpp  ntripclient.hpp  package.xml  socket.hpp
src/ublox_node/: CMakeLists.txt  endianutils.hpp  ubxcbinterface.hpp  ubxgpsnode.cpp  ubxgpsnode.hpp  ubxmessage.cpp  ubxserialhandler.cpp
xavier_nx_carrier_board/Documentation/: Jetson_Nano_Baseboard-Rev.1.4.2-bom.csv
xavier_nx_carrier_board/PCB/: SoM.SchDoc  display.SchDoc  top_sheet.SchDoc  usb-debug.SchDoc
(+110 files in other folders)
