<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtcm_msgs</name>
  <version>0.0.1</version>
  <description>RTCM Correction message definition</description>
  <maintainer email="marcus.wilamowitz@daimler.com">Marcus Graf von Wilamowitz-Moellendorff</maintainer>
  <license>Apache License 2.0</license>
  <author email="marcus.wilamowitz@daimler.com">Marcus Graf von Wilamowitz-Moellendorff</author>  
   <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

