<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rtcm</name>
  <version>0.0.1</version>
  <description>RTCM Correction data broadcaster</description>
  <maintainer email="marcus.wilamowitz@daimler.com">Marcus Graf von Wilamowitz-Moellendorff</maintainer>
  <license>Apache License 2.0</license>
  <author email="marcus.wilamowitz@daimler.com">Marcus Graf von Wilamowitz-Moellendorff</author>  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rtcm_msgs</build_depend>
   <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rtcm_msgs</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

